--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,7 @@
   display:'inline' !important;
   margin-right:'0.5cm';
   margin-right:0.2cm;
+  font-weight:500;
 }
 @media only screen and (max-width: 600px) {
   .player{
