--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,27 @@
   padding-left:0.5cm;
   border-radius: 0 0 0.4cm 0.4cm;
 }
+.title-bar{
+ width: 100%;
+ height:1cm;
+}
 .filters .title{
   width:100%;
   text-align: center;
   font-family: 'Oswald', sans-serif;
 }
+.title-button{
+  width:0.7cm;
+  height:0.7cm;
+  border:none;
+  background-color:#d6ddff;
+  position: absolute;
+  right:1cm;
+  top:0.5cm;
+  opacity: 0.7;
+  border-radius:0.35cm;
+}
+
 .songdiv{
   position:fixed;
   top:3cm;
@@ -53,6 +69,7 @@
   background-color: #b6c0ee;
   border:none;
 }
+
 .prenex:hover{
   background-color: #8493d6;
 }
@@ -70,6 +87,7 @@
 .playallbutton:hover{
   background-color: #8493d6;
 }
+
 .playallbutton:active{
   background-color: #586cc3;
 }
@@ -149,6 +167,30 @@
     width:100%;
     padding-left: 2%;
     padding-right:5%;
+  }
+
+  .title-button{
+    right:0.5cm;
+    top:0.1cm;
+    opacity: 0.7;
+  }
+  .title-button:hover{
+    background-color:#d6ddff;
+  }
+  .title-button:active{
+    background-color: #586cc3;
+  }
+  .prenex:hover{
+    background-color: #b6c0ee;
+  }
+  .playallbutton:hover{
+    background-color: #b6c0ee;
+  }
+  .prenex:active{
+    background-color: #586cc3;
+  }
+  .playallbutton:active{
+    background-color: #586cc3;
   }
 }
 
