--- a/src/App.css
+++ b/src/App.css
@@ -149,8 +149,15 @@
   font-weight: 500;
   font-size:1rem;
 }
-.searchText{
+.searchText,.clearButton{
   font-size:0.9rem;
+}
+.clearButton{
+  height:1.5rem;
+  width:1.5rem;
+  background-color: transparent;
+  border-radius: 50%;
+  transform: translateY(0.05cm);
 }
 @media only screen and (max-width: 700px) {
   .player {
