--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,11 @@
 }
 .title-bar {
   width: 100%;
-  height: 1cm;
+  display: flex;            /* ensure horizontal flow */
+  align-items: center;
+  padding: 0 1cm;        /* breathing room left/right */
+  box-sizing: border-box;
+  gap: 1cm;               /* space between items */
 }
 .filters .title {
   width: 100%;
@@ -27,7 +31,6 @@
   height: 0.7cm;
   border: none;
   background-color: #d6ddff;
-  position: absolute;
   right: 1cm;
   top: 0.5cm;
   opacity: 0.7;
@@ -263,3 +266,22 @@
   margin-bottom: 0.2cm;
   width: 95%;
 }
+
+.search-toggle-button{
+  height:1cm;
+  width:1.2cm;
+  border: none;
+  background-color: #d6ddff;
+  left: 1cm;
+  top: 0.5cm;
+  opacity: 0.7;
+  border-radius: 5px;
+}
+
+.search-toggle-open{
+  background-color: #b8c2f3;
+}
+.search-toggle-closed{
+
+}
+
